--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "prettier": "3.5.3",
+    "sass-embedded": "^1.89.2",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
